# aoc

day-1/: Cargo.toml  in.php
day-1/src/: main.rs
day-3/: Cargo.toml
day-3/src/: main.rs
day-4/: Cargo.toml
day-4/src/: main.rs
day-5/: Cargo.toml  README.md
day-5/src/: instruction_parser.rs  main.rs  stacks_parser.rs
day-6/: Cargo.toml
day-6/src/: main.rs
