[package]
name = "day-4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]

[profile.release]
debug = 0
opt-level = 3
strip = "debuginfo"
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
